# text_editor

./: .gitignore
server/: Cargo.toml
server/src/: main.rs
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
